FIX: Admin nav active link in dark mode
Followup e4b6142d6ac0117237bf034aa9abad9ec3b73c41,
the link was still black in dark mode.

--- a/app/assets/stylesheets/common/admin/admin_base.scss
+++ b/app/assets/stylesheets/common/admin/admin_base.scss
@@ -690,7 +690,7 @@ $mobile-breakpoint: 700px;
     background-color: inherit;
 
     a.active {
-      color: initial;
+      color: var(--primary);
       background-color: initial;
       font-weight: 700;
       border-right: 4px solid var(--quaternary);
